Updated2 index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Registration Form</title>
     <title>Updated Version</title>
+        <title>Updated Version2</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
